--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+::-webkit-scrollbar {
+    width: 15px; 
+    background-color: transparent !important; 
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #4D2316; 
+    border-radius: 20px;
+    border: 3px solid white;
+}
+
+
+::-webkit-scrollbar-track {
+    display: none; 
+}
+
+
+.fullnav
+{
+    background-color: rgb(255, 217, 145);
+    backdrop-filter: blur(10px);
+    
+}
