--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 ::-webkit-scrollbar {
     width: 15px; 
-    background-color: transparent !important; 
+    background-color: #ea5806 !important; 
 }
 
 ::-webkit-scrollbar-thumb {
@@ -23,7 +23,8 @@
 
 .fullnav
 {
-    background-color: rgb(255, 217, 145);
+    background-color: rgba(255, 217, 145, 0.699);
     backdrop-filter: blur(10px);
-    
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
 }
